--- a/app/templates/contact_list.html
+++ b/app/templates/contact_list.html
@@ -62,6 +62,7 @@
                 <h2 class="mb-0 text-center">List of Detail <span class="emoji">📋</span></h2>
             </div>
             <div class="card-body table-responsive">
+                
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -97,7 +98,7 @@
                                     {{ contact.content|truncatewords:20 }}
                                 </div>
                                 <div class="content-full d-none">{{ contact.content }}</div>
-                                <button type="button" class="btn btn-link read-more" data-toggle="modal" data-target="#contentModal{{ contact.id }}">Read More</button>
+                                <button type="button" class="btn btn-link read-more" data-toggle="modal" data-target="#contentModal" data-content="{{ contact.content }}">Read More</button>
                             </td>
                             <td>
                                 {% if contact.status == 'Pending' %}
@@ -107,22 +108,6 @@
                                 {% endif %}
                             </td>
                         </tr>
-                        <!-- Modal -->
-                        <div class="modal fade" id="contentModal{{ contact.id }}" tabindex="-1" role="dialog" aria-labelledby="contentModalLabel{{ contact.id }}" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="contentModalLabel{{ contact.id }}">Full Content</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p id="modalContent{{ contact.id }}">{{ contact.content }}</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         {% endfor %}
                     </tbody>
                 </table>
@@ -160,25 +145,33 @@
         </div>
     </div>
 
+    <!-- Read More Modal -->
+    <div class="modal fade" id="contentModal" tabindex="-1" role="dialog" aria-labelledby="contentModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="contentModalLabel">Full Content</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="modalContent"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
-            $('.read-more').on('click', function() {
-                var $this = $(this);
-                var content = $this.siblings('.content-full').text();
-                
-                // Set the content in the modal
-                $('#modalContent').text(content);
-                
-                // Show the modal
-                $('#contentModal').modal('show');
-            });
-
-            // Close the modal when the close button or outside the modal is clicked
-            $('.close, .modal').on('click', function() {
-                $('#contentModal').modal('hide');
+            $('#contentModal').on('show.bs.modal', function(event) {
+                var button = $(event.relatedTarget); // Button that triggered the modal
+                var content = button.data('content'); // Extract info from data-* attributes
+                var modal = $(this);
+                modal.find('.modal-body #modalContent').text(content);
             });
         });
 
