--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -332,7 +332,7 @@
               <div class="card">
                 <img
                   class="card-img-top"
-                  src="https://via.placeholder.com/800x400"
+                  src="{% static 'images/1.png' %}" 
                   alt="First slide"
                 />
                 
@@ -342,7 +342,7 @@
               <div class="card">
                 <img
                   class="card-img-top"
-                  src="https://via.placeholder.com/800x400"
+                  src="{% static 'images/2.png' %}" 
                   alt="Second slide"
                 />
                 
@@ -352,12 +352,42 @@
               <div class="card">
                 <img
                   class="card-img-top"
-                  src="https://via.placeholder.com/800x400"
+                  src="{% static 'images/3.png' %}" 
                   alt="Third slide"
                 />
                 
               </div>
             </div>
+            <div class="carousel-item">
+                <div class="card">
+                  <img
+                    class="card-img-top"
+                    src="{% static 'images/4.png' %}" 
+                    alt="Third slide"
+                  />
+                  
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <img
+                    class="card-img-top"
+                    src="{% static 'images/5.png' %}" 
+                    alt="Third slide"
+                  />
+                  
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <img
+                    class="card-img-top"
+                    src="{% static 'images/6.png' %}" 
+                    alt="Third slide"
+                  />
+                  
+                </div>
+              </div>
           </div>
           <a
             class="carousel-control-prev"
