--- a/app/templates/contact_list.html
+++ b/app/templates/contact_list.html
@@ -62,9 +62,11 @@
 <body>
     <div class="container-fluid my-4">
         <div class="card">
-            <div class="card-header bg-primary text-white">
-                <h2 class="mb-0 text-center">List of Detail <span class="emoji">📋</span></h2>
-            </div>
+            <a href="{% url 'home' %}">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0 text-center">List of Detail <span class="emoji">📋</span></h2>
+                </div>
+            </a>
             <div class="card-body table-responsive">
                 <table class="table table-striped">
                     <thead>
