--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -62,7 +62,7 @@
             <!-- <li>Instagram page: <a href="https://www.instagram.com/a_custom_song" target="_blank">@a_custom_song</a></li> -->
             <li>Contact our team through WhatsApp</li>
         </ul>
-        <a href="{% url 'contact_form' %}" class="back-button">Back to Home</a>
+        <a href="{% url 'home' %}" class="back-button">Back to Home</a>
     </div>
 </body>
 </html>
