--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -225,7 +225,7 @@
         border: 1px solid #ddd;
         border-radius: 8px;
         margin: 10px;
-        width: 300px;
+        width: 400px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         overflow: hidden;
         transition: transform 0.2s;
@@ -1054,6 +1054,29 @@
           <div class="card-content">
             <h3>Story in Telugu</h3>
             <p>Listen to this wonderful story in Telugu</p>
+          </div>
+        </div>
+
+        <div class="story-card">
+          <video class="video" controls>
+            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="card-content">
+            <h3>Story in Kannada</h3>
+            <p>Listen to this wonderful story in Kannada</p>
+          </div>
+        </div>
+
+
+        <div class="story-card">
+          <video class="video" controls>
+            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="card-content">
+            <h3>Story in Malayalam</h3>
+            <p>Listen to this wonderful story in Malayalam</p>
           </div>
         </div>
       </div>
