--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -159,8 +159,8 @@
         position: fixed;
         bottom: 20px;
         right: 20px;
-        width: 50px;
-        height: 50px;
+        width: 75px;
+        height: 75px;
         background-color: #25d366;
         border-radius: 50%;
         display: flex;
@@ -965,7 +965,7 @@
               </button>
               <audio
                 id="audio4"
-                src="static/audio/Hindi.mp3"
+                src="static/audio/telugu.mp3"
                 onloadedmetadata="setDuration('audio4')"
               ></audio>
               <span class="duration" id="duration-audio4"></span>
@@ -985,7 +985,7 @@
               </button>
               <audio
                 id="audio5"
-                src="static/audio/Hindi.mp3"
+                src="static/audio/Kannada.mp3"
                 onloadedmetadata="setDuration('audio5')"
               ></audio>
               <span class="duration" id="duration-audio5"></span>
@@ -1005,7 +1005,7 @@
               </button>
               <audio
                 id="audio6"
-                src="static/audio/Hindi.mp3"
+                src="static/audio/malayalam.mp3"
                 onloadedmetadata="setDuration('audio6')"
               ></audio>
               <span class="duration" id="duration-audio6"></span>
@@ -1015,7 +1015,7 @@
 
         <div class="story-card">
           <video class="video" controls>
-            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            <source src="static/images/ENGLISH.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="card-content">
@@ -1037,7 +1037,7 @@
 
         <div class="story-card">
           <video class="video" controls>
-            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            <source src="static/images/HINDI .mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="card-content">
@@ -1048,7 +1048,7 @@
 
         <div class="story-card">
           <video class="video" controls>
-            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            <source src="static/images/TELUGU.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="card-content">
@@ -1059,7 +1059,7 @@
 
         <div class="story-card">
           <video class="video" controls>
-            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            <source src="static/images/KANNADA.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="card-content">
@@ -1071,7 +1071,7 @@
 
         <div class="story-card">
           <video class="video" controls>
-            <source src="static/images/tamil.video.mp4" type="video/mp4" />
+            <source src="static/images/MALAYALAM.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="card-content">
@@ -1284,14 +1284,14 @@
             <li>
               <a
                 class="text-gray-100 hover:text-gray-800"
-                href="mailto:info@customsong.com"
-                >✉️ makeacustomsongs.com</a
+                href="mailto:makeacustomsongs@gmail.com"
+                >✉️ makeacustomsongs@gmail.com</a
               >
             </li>
             <li>
               <a
                 class="text-gray-100 hover:text-gray-800"
-                href="tel:+1234567890"
+                href="tel:9176132273"
                 >📞 9176132273</a
               >
             </li>
