--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1181,7 +1181,9 @@
               style="height: 60px"
             />
           </a>
-          <h1 class="mt-2 text-sm text-gray-100">Make A Custom Song</h1>
+          <br>
+          <br>
+          <h1>Creating a custom song is a unique way to express emotions, celebrate special moments, or simply enjoy personalized music tailored to your taste.<h1>
         </div>
         <div
           class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
